--- a/familierejser.html
+++ b/familierejser.html
@@ -21,10 +21,10 @@
             <input type="checkbox" id="toggle" class="hidden">
             <!-- This has to be outside of #logo-burger to work. #main-nav cannot be selected when this is in a container -->
             <ul id="main-nav">
-                <li><a href="#">Home</a></li>
-                <li><a href="#">Products</a></li>
-                <li><a href="#">About</a></li>
-                <li><a href="#">Contact</a></li>
+                   <li><a href="index.html">Home</a></li>
+                <li><a href="familierejser.html">Familierejser</a></li>
+                <li><a href="#">Galleri</a></li>
+                <li><a href="#">Kontakt</a></li>
             </ul>
         </nav>
     </header>
